--- a/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
+++ b/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
@@ -130,8 +130,14 @@
   <data name="zTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\zTable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bed1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="DressTable_brown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DressTable_brown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bed3_grey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed3_grey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Ward_normal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ward_normal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -166,11 +172,11 @@
   <data name="window1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Lamp_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="aircon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\aircon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,7 +187,10 @@
   <data name="361213576_2898278143635793_7378312839190816006_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\361213576_2898278143635793_7378312839190816006_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="aircon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\aircon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bed1_blue1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed1_blue1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bed4_kid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed4_kid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
