--- a/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
+++ b/Ma-Norn-Duay-Gun-Mai/Properties/Resources.resx
@@ -145,6 +145,9 @@
   <data name="Bed_pink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_pink.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Lamp_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lamp_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Lamp1_brown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Lamp1_brown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,9 +163,6 @@
   <data name="empty room" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\empty room.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="aircon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\aircon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Window_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Window_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -172,14 +172,17 @@
   <data name="Bed_kid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_kid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bed1_blue_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed1_blue_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="window1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\window1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed1_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed1_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lamp_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lamp_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="aircon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\aircon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Bed_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -193,7 +196,7 @@
   <data name="Bed1_blue1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Bed1_blue1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Bed1_blue_h" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Bed1_blue_h.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Bed2_cream" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bed2_cream.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
