explanation form done, added picture, fix typo

--- a/Ma-Norn-Duay-Gun-Mai/Form2.resx
+++ b/Ma-Norn-Duay-Gun-Mai/Form2.resx
@@ -120,10 +120,10 @@
   <data name="textBox1.Text" xml:space="preserve">
     <value>Welcome to Ma-Norn-Duay-Gun-Mai!
 
-In this program you will be able to 
+In this program, you will be able to 
 customize a bedroom as you wish!
 
-Move your cursur onto an object, 
+Move your cursor onto an object, 
 if it gets highlighted, then it is time for you to customize!</value>
   </data>
 </root>
